# wa_backend

./: .coveragerc  .dockerignore  .gitignore  README.md  api.py  backend-doc.md  config.py  database.db  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  requirements_ci.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  version.py
.backendenv/: pyvenv.cfg
.backendenv/Scripts/: activate  activate.bat
.github/ISSUE_TEMPLATE/: bug_report.md  user-story.md
.github/workflows/: pythonapp.yml
docs/diagrams/: general.uml
scripts/: create_db.py
src/wa_backend/: __init__.py
src/wa_backend/apis/tasks/: __init__.py
tests/: conftest.py  test_myclass.py  test_task.py
tests/functional/: test_no-todo.py
tests/unit/: test_new_todo.py
