[metadata]
name = wa_backend
description = wa_backend
long_description = "white app flask backend"
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
python_requires = >=3.8
setup_requires =
  setuptools_scm

install_requires = 
  Flask >= 1.1.2
  Flask-Cors >= 3.0.10
  Flask-SQLAlchemy >= 2.5.1
  SQLAlchemy >= 1.4.11

[options.packages.find]
where = src

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1


